# Customer_Onboarding_CompViz

./: .gitignore  JustFile  README.md  mkdocs.yml  pyproject.toml  route_config.toml
backend/: __init__.py  fast_api_server.py  otp_validation.py
backend/model_server/: __init__.py  img_processing.py  ray_config.yaml  server.py
docs/: architecture.md  experience.md  functionality.md  index.md
frontend/: __init__.py  app.py
frontend/components/: __init__.py  login.py  registration.py
frontend/pages/: __init__.py  profile_page.py
load_testing/: __init__.py  load_test.py
unified_logging/: __init__.py  config_types.py  configs.toml  logging_client.py  logging_server.py
user_data/ashisht/: user_info.yaml
